--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -523,3 +523,59 @@ body {
 .contact-form button:hover {
     background-color: #333;
 }
+
+/* Section plein écran */
+.hero-video {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+}
+
+/* Vidéo plein écran */
+.bg-video {
+    position: fixed; /* clé pour toute la page */
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
+    z-index: -2;
+}
+
+/* Overlay sombre */
+.hero-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.45);
+    z-index: -1;
+}
+
+/* Texte au-dessus */
+.hero-content {
+    position: relative;
+    height: 100vh;
+    z-index: 1;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    color: white;
+    text-align: center;
+}
+
+.hero-content h1 {
+    font-size: 3.5rem;
+    margin: 0;
+}
+
+.hero-content h2 {
+    font-size: 1.4rem;
+    font-weight: 300;
+    margin-top: 10px;
+}
